--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -2,7 +2,7 @@
 
 @import "common";
 
-@import "~@fontsource/lato/scss/mixins";
+@import "@fontsource/lato/scss/mixins";
 
 @include fontFace($style: italic, $weight: 400);
 
