feat(ui): upgrade to ng16

--- a/ui/src/app/shared/variable/audit/variable.audit.html
+++ b/ui/src/app/shared/variable/audit/variable.audit.html
@@ -1,4 +1,4 @@
-<nz-table [nzData]="audits" #audit>
+<nz-table [nzData]="nzModalData?.audits" #audit>
     <thead>
         <tr>
             <th>Change date</th>
