--- a/ui/src/app/views/projectv2/vcs/repository/workflow/show/graph/node/gate-node.html
+++ b/ui/src/app/views/projectv2/vcs/repository/workflow/show/graph/node/gate-node.html
@@ -1,4 +1,4 @@
-<div class="node pointing" [class.highlight]="highlight" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseOut()"
+<div class="node pointing" [class.highlight]="highlight" (click)="onMouseClick()" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseOut()"
      [class.success]="status === pipelineStatusEnum.SUCCESS">
     <i nz-icon nzType="user" nzTheme="outline"></i>
 </div>
