--- a/ui/src/app/views/projectv2/run/gate/gate.scss
+++ b/ui/src/app/views/projectv2/run/gate/gate.scss
@@ -1,5 +1,7 @@
 :host {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     height: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
 }
