--- a/ui/src/app/views/projectv2/run/gate/gate.html
+++ b/ui/src/app/views/projectv2/run/gate/gate.html
@@ -1,7 +1,8 @@
-<div nz-form>
+<h1>Trigger {{gateNode.job}}</h1>
+<div nz-form nzLayout="horizontal">
     <ng-container *ngFor="let k of request | keys">
         <nz-form-item>
-            <nz-form-label>{{k}}</nz-form-label>
+            <nz-form-label [nzSpan]="4">{{k}}</nz-form-label>
             <ng-container [ngSwitch]="currentGate.inputs[k].type">
                 <nz-form-control *ngSwitchCase="'number'">
                     <input nz-input [(ngModel)]="request[k]" type="number" />
@@ -20,5 +21,5 @@
             </ng-container>
         </nz-form-item>
     </ng-container>
-    {{request | json}}
+    <button nz-button nzBlock [nzLoading]="loading" nzType="primary" (click)="triggerJob()">Run {{gateNode.job}}</button>
 </div>
