--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -1,4 +1,4 @@
-@import "../node_modules/ng-zorro-antd/ng-zorro-antd.dark.less";
+@import "../node_modules/ng-zorro-antd/ng-zorro-antd.dark.css";
 
 .ant-popover-inner, .ant-popover-arrow-content {
   background-color: #313131;
