fix(vcs): old and new vcs gerrit compatibility
Signed-off-by: Yvonnick Esnault <yvonnick.esnault@corp.ovh.com>

--- a/ui/src/app/shared/repomanager/from/repomanager.form.html
+++ b/ui/src/app/shared/repomanager/from/repomanager.form.html
@@ -57,8 +57,8 @@
         <ng-container *ngIf="addRepoResponse?.auth_type === 'basic'">
             <button nz-button nzType="primary" name="validationbtn" [nzLoading]="verificationLoading" (click)="sendBasicAuth()">Validate</button>
         </ng-container>
-        <ng-container *ngIf="selectedRepoId != null">
-            <button nz-button nzType="primary" name="validationbtn" [nzLoading]="verificationLoading" (click)="sendVerificationCode()">Validate</button>
+        <ng-container *ngIf="addRepoResponse?.auth_type === 'oauth' && selectedRepoId != null">
+            <button nz-button nzType="primary" name="validationbtn" [nzLoading]="verificationLoading" (click)="sendVerificationCode()">Validate Verification Code</button>
         </ng-container>
     </div>
 </nz-modal>
