--- a/ui/src/app/shared/repomanager/from/repomanager.form.html
+++ b/ui/src/app/shared/repomanager/from/repomanager.form.html
@@ -29,14 +29,9 @@
     </nz-row>
 </form>
 
-<nz-modal nzTitle="Repository Manager Configuration - {{vcsProject.type}}" [nzVisible]="repoModalVisible" (nzOnCancel)="repoModalVisible = false">
+<nz-modal nzTitle="Repository Manager Configuration - {{vcsProject.type}}" [nzVisible]="repoModalVisible" (nzOnCancel)="repoModalVisible = false" nzWidth="700px">
     <div *nzModalContent>
         <form nz-form>
-            <ng-container>
-                <nz-form-item>
-                    <h3>VCS Server</h3>
-                </nz-form-item>
-            </ng-container>
             <ng-container>
                 <nz-form-item nz-rows>
                     <nz-form-label [nzSm]="6">Type</nz-form-label>
@@ -147,24 +142,16 @@
         </form>
     </div>
     <div *nzModalFooter>
-        <button nz-button nzType="primary" *ngIf="this.vcsProjectName" (click)="saveVCSProject()">Save</button>
-        <button nz-button nzType="primary" nzDanger *ngIf="this.vcsProjectName" [disabled]="askDeleting" (click)="askDeleting = true">Delete</button>
-        <button nz-button nzType="primary" *ngIf="!this.vcsProjectName" (click)="addVCSProject()">Add</button>
-        <button nz-button name="cancel" (click)="repoModalVisible = false">Cancel</button>
-
-        <nz-card *ngIf="askDeleting" nzTitle="Danger zone" class="redTitle">
-            <nz-row>
-                <nz-col>
-                    <div class="description">Once you delete a repository manager, there is no going back. Please be certain.</div>
-                    <button nz-button nzType="primary" nzDanger nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this repository manager?"
-                           [nzLoading]="loading" (nzOnConfirm)="deleteVCSProject()">Delete</button>
-                    <button nz-button name="cancel" (click)="askDeleting = false">Cancel</button>
-                </nz-col>
-            </nz-row>
-        </nz-card>
-
+        <nz-row>
+            <nz-col [nzSpan]="4">
+                <button nz-button nzType="primary" nzDanger nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this repository manager?" 
+            [nzLoading]="loading" (nzOnConfirm)="deleteVCSProject()">Delete</button>
+            </nz-col>
+            <nz-col [nzSpan]="20">
+                <button nz-button nzType="primary" *ngIf="this.vcsProjectName" (click)="saveVCSProject()">Save</button>
+                <button nz-button nzType="primary" *ngIf="!this.vcsProjectName" (click)="addVCSProject()">Add</button>
+                <button nz-button name="cancel" (click)="repoModalVisible = false">Cancel</button>
+            </nz-col>
+        </nz-row>
     </div>
-
-    
-
 </nz-modal>
